deploy: 4a314ea939007b6881c36ab760fe0f19b7060412

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<h1>integer-divisors</h1>
 				</a>
 				<blockquote>
-					<p>Calculate efficiently divisors (also called factors) of small natural numbers.</p>
+					<p>Efficient calculation of divisors (also called factors) of small natural numbers.</p>
 				</blockquote>
 				<a href="#license" id="license" style="color: inherit; text-decoration: none;">
 					<h2>License</h2>
