deploy: 5e0176c26c256c88bea5a9f4eca27113727920c5

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 				<a href="#integer-divisors" id="integer-divisors" style="color: inherit; text-decoration: none;">
 					<h1>integer-divisors</h1>
 				</a>
-				<p><img src="https://github.com/vitroxyn/integer-divisors/workflows/build/badge.svg" alt=""></p>
+				<p><a href="https://github.com/vitroxyn/integer-divisors/actions?query=workflow%3Abuild"><img src="https://github.com/vitroxyn/integer-divisors/workflows/build/badge.svg" alt=""></a>
+				<a href="https://coveralls.io/github/Vitroxyn/integer-divisors?branch=master"><img src="https://coveralls.io/repos/github/Vitroxyn/integer-divisors/badge.svg?branch=master" alt="Coverage Status"></a></p>
 				<blockquote>
 					<p>Efficient calculation of divisors (also called factors) of small natural numbers.</p>
 				</blockquote>
