--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 				<a href="#integer-divisors" id="integer-divisors" style="color: inherit; text-decoration: none;">
 					<h1>integer-divisors</h1>
 				</a>
-				<p><a href="https://github.com/vitroxyn/integer-divisors/actions?query=workflow%3Abuild"><img src="https://github.com/vitroxyn/integer-divisors/workflows/build/badge.svg" alt=""></a>
-					<a href="https://coveralls.io/github/Vitroxyn/integer-divisors?branch=master"><img src="https://coveralls.io/repos/github/Vitroxyn/integer-divisors/badge.svg?branch=master" alt="Coverage Status"></a>
-				<a href="https://nodei.co/npm/integer-divisors/"><img src="https://nodei.co/npm/integer-divisors.png?mini=true" alt="NPM"></a></p>
+				<p><a href="https://npmjs.org/package/integer-divisors"><img src="https://img.shields.io/npm/v/integer-divisors.svg?style=flat" alt="NPM"></a>
+					<a href="https://github.com/vitroxyn/integer-divisors/actions?query=workflow%3Abuild"><img src="https://github.com/vitroxyn/integer-divisors/workflows/build/badge.svg" alt=""></a>
+				<a href="https://coveralls.io/github/Vitroxyn/integer-divisors?branch=master"><img src="https://coveralls.io/repos/github/Vitroxyn/integer-divisors/badge.svg?branch=master" alt="Coverage Status"></a></p>
 				<blockquote>
 					<p>Efficient calculation of divisors (also called factors) of small natural numbers.</p>
 				</blockquote>
