--- a/globals.html
+++ b/globals.html
@@ -96,7 +96,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L146">index.ts:146</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L146">src/index.ts:146</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -135,7 +135,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L92">index.ts:92</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L92">src/index.ts:92</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -177,7 +177,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L112">index.ts:112</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L112">src/index.ts:112</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -219,7 +219,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L130">index.ts:130</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L130">src/index.ts:130</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -261,7 +261,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L14">index.ts:14</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L14">src/index.ts:14</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -303,7 +303,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L38">index.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L38">src/index.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -345,7 +345,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L65">index.ts:65</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L65">src/index.ts:65</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -387,7 +387,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L194">index.ts:194</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L194">src/index.ts:194</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -426,7 +426,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/c8f3c2f/src/index.ts#L167">index.ts:167</a></li>
+									<li>Defined in <a href="https://github.com/Vitroxyn/integer-divisors/blob/9cfb7b6/src/index.ts#L167">src/index.ts:167</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -511,6 +511,5 @@
 </div>
 <div class="overlay"></div>
 <script src="assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
